[gd_scene load_steps=27 format=1]

[ext_resource path="res://battle/battle.gd" type="Script" id=1]
[ext_resource path="res://battle/assets/theHand3.png" type="Texture" id=2]
[ext_resource path="res://battle/assets/background2.png" type="Texture" id=3]
[ext_resource path="res://battle/assets/getReady.png" type="Texture" id=4]
[ext_resource path="res://temple/assets/font40.fnt" type="BitmapFont" id=5]
[ext_resource path="res://temple/assets/font26.fnt" type="BitmapFont" id=6]
[ext_resource path="res://instructions/assets/white.png" type="Texture" id=7]
[ext_resource path="res://instructions/assets/green.png" type="Texture" id=8]
[ext_resource path="res://instructions/assets/red.png" type="Texture" id=9]
[ext_resource path="res://instructions/assets/yellow.png" type="Texture" id=10]
[ext_resource path="res://battle/assets/lifeBg.png" type="Texture" id=11]
[ext_resource path="res://battle/assets/lifefront.png" type="Texture" id=12]
[ext_resource path="res://temple/assets/font20.fnt" type="BitmapFont" id=13]
[ext_resource path="res://battle/assets/sprite_6.png" type="Texture" id=14]
[ext_resource path="res://battle/assets/win.png" type="Texture" id=15]
[ext_resource path="res://player/assets/chara/sprite_1.png" type="Texture" id=16]
[ext_resource path="res://temple/assets/font32.fnt" type="BitmapFont" id=17]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.558
height = 4.36493

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -10, 0, 0, 0, 0, 480, -10, 490 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 650, 490, -10, 490, 0, 480, 640, 480 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 650, 0, 650, 490, 640, 480, 640, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 0, -10, 650, -10, 650, 0, 0, 0 )

[sub_resource type="Animation" id=6]

resource/name = "beforeGame"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 1.8, 2.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1.8, 2.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.6, 1.1, 1.5, 1.9, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 4.0, -4.0, 0.0, 4.0, 0.0 ] }

[sub_resource type="Animation" id=7]

resource/name = "appearHand"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../hand:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.7 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=8]

resource/name = "failed"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("..:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=9]

resource/name = "win"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("..:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="battle" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hand" type="Node2D" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="hand"]

editor/display_folded = true
transform/pos = Vector2( -755.427, 126.562 )
transform/rot = 300.0
transform/scale = Vector2( 1.175, 1.35417 )
z/z = 2
texture = ExtResource( 2 )
offset = Vector2( 315, -5 )

[node name="Area2D" type="Area2D" parent="hand/Sprite"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.26056, 0, 0, 1, -4.2072, -3.43121 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand/Sprite/Area2D"]

transform/pos = Vector2( -4.2072, -3.43121 )
transform/scale = Vector2( 1.26056, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="hand"]

[node name="background" type="Node2D" parent="."]

z/z = -3

[node name="Sprite" type="Sprite" parent="background"]

z/z = -3
texture = ExtResource( 3 )
centered = false
modulate = Color( 1, 0.844482, 0.644531, 1 )
__meta__ = { "_edit_lock_":true }

[node name="downRight" type="StaticBody2D" parent="background"]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="background/downRight"]

build_mode = 0
polygon = Vector2Array( 0, 0, 0, 480, 640, 480, 640, 0, 650, 0, 650, 490, -10, 490, -10, 0 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="up" type="StaticBody2D" parent="background"]

input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="background/up"]

build_mode = 0
polygon = Vector2Array( 0, 0, 650, 0, 650, -10, 0, -10 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="timers" type="Node2D" parent="."]

editor/display_folded = true

[node name="flyAway" type="Timer" parent="timers"]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = false

[node name="beforegame" type="Timer" parent="timers"]

process_mode = 1
wait_time = 2.5
one_shot = false
autostart = true

[node name="spawnTimer" type="Timer" parent="timers"]

process_mode = 1
wait_time = 0.7
one_shot = false
autostart = false

[node name="beforeGame" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="beforeGame"]

transform/pos = Vector2( 324, 216 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="beforeGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 300.0
margin/right = 394.0
margin/bottom = 352.0
custom_fonts/font = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beforeGameAnimation" type="AnimationPlayer" parent="beforeGame"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/beforeGame = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "beforeGame"

[node name="Label 2" type="Label" parent="beforeGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -85.0
margin/top = 261.0
margin/right = 726.0
margin/bottom = 296.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Use your mouse and keys to kill the fleas!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="1" type="Sprite" parent="beforeGame"]

transform/pos = Vector2( 375, 125 )
transform/scale = Vector2( 2.1875, 2.1875 )
texture = ExtResource( 7 )

[node name="2" type="Sprite" parent="beforeGame"]

transform/pos = Vector2( 275, 125 )
transform/scale = Vector2( 2.1875, 2.1875 )
texture = ExtResource( 8 )

[node name="3" type="Sprite" parent="beforeGame"]

transform/pos = Vector2( 165, 125 )
transform/scale = Vector2( 2.1875, 2.1875 )
texture = ExtResource( 9 )

[node name="4" type="Sprite" parent="beforeGame"]

transform/pos = Vector2( 485, 125 )
transform/scale = Vector2( 2.1875, 2.1875 )
texture = ExtResource( 10 )

[node name="animations" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = { "_edit_lock_":true }

[node name="appearHand" type="AnimationPlayer" parent="animations"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/appearHand = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="hud" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 0.0
margin/right = 630.0
margin/bottom = 480.0
__meta__ = { "_edit_lock_":true }

[node name="flyAway" type="TextureProgress" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 450.0
margin/right = 630.0
margin/bottom = 470.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 11 )
texture/over = null
texture/progress = ExtResource( 12 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
__meta__ = { "_edit_lock_":true }

[node name="Label" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 250.0
margin/top = 448.0
margin/right = 410.0
margin/bottom = 470.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Fly Away!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="z" type="Node2D" parent="hud"]

visibility/opacity = 0.0
visibility/blend_mode = 1
z/z = -2
__meta__ = { "_edit_lock_":true }

[node name="mosquitoCount" type="Label" parent="hud/z"]

visibility/opacity = 0.88
rect/rotation = 45.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 189.0
margin/top = 373.0
margin/right = 599.0
margin/bottom = 417.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "kill 0 mosquitos"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="failed" type="Node2D" parent="."]

visibility/opacity = 0.0
z/z = 3
__meta__ = { "_edit_lock_":true }

[node name="Sprite" type="Sprite" parent="failed"]

transform/pos = Vector2( 319.534, 308.193 )
transform/scale = Vector2( 8.26308, 8.76888 )
texture = ExtResource( 14 )

[node name="failedAnimation" type="AnimationPlayer" parent="failed"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/failed = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="failed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 132.0
margin/top = 88.0
margin/right = 526.0
margin/bottom = 132.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You just failed!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="Label 2" type="Label" parent="failed"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 143.0
margin/top = 347.0
margin/right = 540.0
margin/bottom = 373.0
custom_fonts/font = ExtResource( 6 )
text = "Sensei is going to be mad...."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="win" type="Node2D" parent="."]

visibility/opacity = 0.0
z/z = 3
__meta__ = { "_edit_lock_":true }

[node name="Sprite" type="Sprite" parent="win"]

transform/pos = Vector2( 311.478, 186.048 )
texture = ExtResource( 15 )
__meta__ = { "_edit_lock_":true }

[node name="WinAnimation" type="AnimationPlayer" parent="win"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/win = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite 2" type="Sprite" parent="win"]

transform/pos = Vector2( 326.014, 319.713 )
transform/scale = Vector2( 4.94861, 4.49556 )
texture = ExtResource( 16 )
__meta__ = { "_edit_lock_":true }

[node name="Label" type="Label" parent="win"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 131.0
margin/top = 107.0
margin/right = 536.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 17 )
text = "No prob with sensei!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[connection signal="timeout" from="timers/spawnTimer" to="." method="_on_spawnTimer_timeout"]

[connection signal="finished" from="beforeGame/beforeGameAnimation" to="." method="_on_beforeGameAnimation_finished"]

[connection signal="finished" from="failed/failedAnimation" to="." method="_on_failedAnimation_finished"]

[connection signal="finished" from="win/WinAnimation" to="." method="_on_WinAnimation_finished"]


